[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Lack_12.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/slot/Slot.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Slot" type="Button"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
focus_mode = 0
shortcut_in_tooltip = false
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Margin"]
margin_left = 6.0
margin_top = 6.0
margin_right = 34.0
margin_bottom = 34.0
mouse_filter = 2
expand = true

[node name="Label" type="Label" parent="Margin"]
margin_left = 6.0
margin_top = 6.0
margin_right = 34.0
margin_bottom = 34.0
grow_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
value = 100.0
texture_progress = SubResource( 2 )
fill_mode = 5
tint_progress = Color( 0, 0, 0, 0.588235 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TimerLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[connection signal="pressed" from="." to="." method="_on_Slot_pressed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
